# apinonnopy

./: manage.py  pyproject.toml  render.yaml  requirements.txt
apinonnopy/: asgi.py  settings.py  urls.py  wsgi.py
posts/: models.py
posts/api/: serializers.py  viewsets.py
posts/migrations/: 0001_initial.py
termos/: apps.py  models.py
termos/api/: serializers.py  viewsets.py
termos/migrations/: 0001_initial.py
